
	* src/engine/gnc-commodity.h: add ASX namespace

	* src/gnome/dialog-commodity.c (gnc_ui_edit_commodity_modal): new
	func. unfinished. rename some functions to reflect that it's also
	an editing dialog now.

2001-04-11  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm (render-month-subheading):
	fix bug.

2001-04-11  Christian Stimming  <stimming@tuhh.de>

	* src/scm/options.scm (gnc:options-copy-values): New function.
	
	* src/scm/report/account-piecharts.scm: Added anchors to yet other
	reports on the slices of the pie. Simplified creation of other
	report's options.

	* src/scm/report/category-barchart.scm: Simplified creation of
	other report's options.

	* src/scm/report/report-list.scm: Renamed file.
	
	* src/scm/report/account-piecharts.scm: Renamed to this filename
	(used to be: income-or-expense-pie.scm). Introduced some more
	generality such that this file also has an asset and a liability
	balance piechart.

	* src/scm/report/category-barchart.scm: Introduced some
	more generality such that this file also has a asset and liability
	balance barchart.

2001-04-10  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report-utilities.scm: Added function
	(gnc:account-get-type-string-plural). Changed
	gnc:decompose-accountlist to return AccountType symbols.

	* src/scm/html-utilities.scm,
	src/scm/report/net-worth-timeseries.scm, balance-sheet.scm:
	Adapted to changed gnc:decompose-accountlist.

2001-04-10  Dave Peticolas  <dave@krondo.com>

	* src/engine/date.c (__EXTENSIONS__): add a define for solaris

	* src/gnome/dialog-commodities.c: new file. commodity editor.
	unfinished.

2001-04-10  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/net-worth-timeseries.scm: Fixed date argument
	bug. Added auto label rotation.

	* src/scm/date-utilities.scm: Renamed gnc:dateloop to
	gnc:make-date-interval-list and gnc:dateloop-simple to
	gnc:make-date-list.

	* src/scm/report/category-barchart.scm, income-expense-graph.scm: